# streamit

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  nightly.yml
deploy/local/: broker1.yaml  broker2.yaml  broker3.yaml  controller1.yaml  coordinator1.yaml  topics.yaml
deploy/prometheus/: prometheus.yml
docker/: broker.Dockerfile  controller.Dockerfile  coordinator.Dockerfile
include/streamit/broker/: bounded_idempotency_table.h  broker_metrics.h  broker_service.h  idempotency_table.h
include/streamit/common/: config.h  crc32.h  health_check.h  http_health_server.h  metrics.h  result.h  signal_shutdown.h  status.h  tracing.h
include/streamit/controller/: controller_service.h  topic_manager.h
include/streamit/coordinator/: consumer_group_manager.h  coordinator_service.h
include/streamit/net/: grpc_server.h
include/streamit/storage/: flush_policy.h  index.h  log_dir.h  manifest.h  record.h  segment.h  serializer.h  zero_copy.h
proto/: streamit.proto
scripts/: dev_down.sh  dev_up.sh  test_system.sh
src/broker/: CMakeLists.txt  bounded_idempotency_table.cc  broker_main.cc  broker_metrics.cc  broker_service.cc  idempotency_table.cc
src/common/: CMakeLists.txt  config.cc  crc32.cc  health_check.cc  http_health_server.cc  metrics.cc  result.cc  signal_shutdown.cc  status.cc  tracing.cc
src/controller/: CMakeLists.txt  controller_main.cc  controller_service.cc  topic_manager.cc
src/coordinator/: CMakeLists.txt  consumer_group_manager.cc  coordinator_main.cc  coordinator_service.cc
src/net/: CMakeLists.txt  grpc_server.cc
src/proto/: streamit.grpc.pb.cc  streamit.grpc.pb.h  streamit.pb.cc  streamit.pb.h
src/proto/proto/: streamit.grpc.pb.cc  streamit.grpc.pb.h  streamit.pb.cc  streamit.pb.h
src/storage/: CMakeLists.txt  flush_policy.cc  index.cc  log_dir.cc  manifest.cc  record.cc  segment.cc  serializer.cc  zero_copy.cc
tests/: chaos_tests.cc  durability_tests.cc
tests/integration/: CMakeLists.txt  test_broker_integration.cc  test_consumer_group_integration.cc
tests/unit/: CMakeLists.txt  test_broker.cc  test_common.cc  test_controller.cc  test_coordinator.cc  test_storage.cc
tools/cli/: CMakeLists.txt  admin.cc  admin.h  cli_main.cc  consumer.cc  consumer.h  producer.cc  producer.h
